<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.OptionsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/clContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvADT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:fontFamily="@font/londrina_shadow"
            android:text="@string/adt"
            android:textSize="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvADT">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/icon_back"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/londrina_solid"
                android:text="@string/options"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clTitle">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfileBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corner"
            android:backgroundTint="@color/backgroundGreen"
            android:elevation="4dp"
            android:text="@string/edit_user"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/checkoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkoutButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corner"
            android:backgroundTint="@color/backgroundGreen"
            android:elevation="4dp"
            android:text="@string/become_premium"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/deleteAccountBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editProfileBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteAccountBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corner"
            android:backgroundTint="@color/backgroundGreen"
            android:elevation="4dp"
            android:text="@string/delete_account"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/logoutBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkoutButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded_corner"
            android:backgroundTint="@color/backgroundGreen"
            android:elevation="4dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteAccountBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
